# EasyCMake

./: CMakeLists.txt  EasyCMake.cmake  README.md
apps/app1/: app1.cpp  app1.hpp  main.cpp
apps/app2/: app2.cpp  app2.hpp  main.cpp
modules/module1/: module1.cpp  module1.hpp
